# AgenticAICredServe

./: .gitignore  README.md  architecture.md  main.py  pyproject.toml  requirements.txt
backend/: api.py  collection_agent.py  extractor.py  verifier.py
frontend/: index.html  script.js  status.html  style.css  upload.html
logs/: agent_logs.json
