[project]
name = "agenticaicredserve"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "easyocr>=1.7.2",
    "fastapi>=0.135.1",
    "google-generativeai>=0.8.6",
    "gtts>=2.5.4",
    "langchain>=1.2.13",
    "langgraph>=1.1.3",
    "numpy>=2.4.3",
    "openai>=2.29.0",
    "pandas>=3.0.1",
    "pdf2image>=1.17.0",
    "pillow>=12.1.1",
    "pydantic>=2.12.5",
    "pymupdf>=1.27.2.2",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "twilio>=9.10.3",
    "uvicorn>=0.42.0",
]
